Fix: Project Organization by Levels

--- a/BlogCoreNET.AccessData/BlogCoreNET.AccessData.csproj
+++ b/BlogCoreNET.AccessData/BlogCoreNET.AccessData.csproj
@@ -16,4 +16,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogCoreNET.Models\BlogCoreNET.Models.csproj" />
+    <ProjectReference Include="..\BlogCoreNET.Utilities\BlogCoreNET.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
