--- a/BlogCoreNET/BlogCoreNET.csproj
+++ b/BlogCoreNET/BlogCoreNET.csproj
@@ -20,4 +20,8 @@
     <Folder Include="Areas\Admin\Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogCoreNET.AccessData\BlogCoreNET.AccessData.csproj" />
+  </ItemGroup>
+
 </Project>
