--- a/BlogCoreNET/appsettings.json
+++ b/BlogCoreNET/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlogCoreNET-6f5dcd2f-34bc-4f39-9814-db7f06a10be6;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "ConexionSQL": "Server=MSI\\SQLEXPRESS;Database=BlogCoreNET8;User ID=sa;Password=1234;Trusted_Connection=true;Encrypt=false;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
